--- a/package.json
+++ b/package.json
@@ -21,12 +21,7 @@
   "homepage": "https://github.com/leizongmin/peento",
   "dependencies": {
     "debug": "^0.8.0",
-    "rd": "0.0.2",
     "express": "^4.0.0",
-    "lei-mysql-model": "^0.1.1",
-    "lei-mysql": "^0.1.6",
-    "express-liquid": "^0.2.4",
-    "tinyliquid": "^0.2.17",
     "body-parser": "^1.0.1",
     "cookie-parser": "^1.0.1",
     "cookie-session": "^1.0.1",
@@ -34,9 +29,14 @@
     "serve-static": "^1.0.4",
     "csurf": "^1.1.0",
     "connect-timeout": "^1.0.0",
+    "connect-multiparty": "^1.0.3",
+    "express-liquid": "^0.2.4",
+    "tinyliquid": "^0.2.17",
+    "rd": "0.0.2",
     "lei-ns": "^0.1.2",
+    "lei-mysql": "^0.1.6",
+    "lei-mysql-model": "^0.1.1",
     "lei-pipe": "0.0.1",
-    "async": "~0.7.0",
-    "connect-multiparty": "^1.0.3"
+    "async": "~0.7.0"
   }
 }
