--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/leizongmin/peento.git"
+    "url": "git://github.com/peento/peento.git"
   },
   "keywords": [
     "blog"
@@ -16,9 +16,9 @@
   "author": "Zongmin Lei <leizongmin@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/leizongmin/peento/issues"
+    "url": "https://github.com/peento/peento/issues"
   },
-  "homepage": "https://github.com/leizongmin/peento",
+  "homepage": "https://github.com/peento/peento",
   "dependencies": {
     "debug": "^0.8.0",
     "express": "^4.0.0",
