使用lei-routes-sort模块解决路由冲突

--- a/package.json
+++ b/package.json
@@ -20,24 +20,25 @@
   },
   "homepage": "https://github.com/peento/peento",
   "dependencies": {
-    "debug": "^0.8.0",
-    "express": "^4.0.0",
+    "async": "~0.7.0",
     "body-parser": "^1.0.1",
+    "connect-multiparty": "^1.0.3",
+    "connect-timeout": "^1.0.0",
     "cookie-parser": "^1.0.1",
     "cookie-session": "^1.0.1",
-    "morgan": "^1.0.0",
-    "serve-static": "^1.0.4",
     "csurf": "^1.1.0",
-    "connect-timeout": "^1.0.0",
-    "connect-multiparty": "^1.0.3",
+    "debug": "^0.8.0",
+    "express": "^4.0.0",
     "express-liquid": "^0.2.4",
-    "tinyliquid": "~0.2.19",
-    "rd": "0.0.2",
-    "lei-ns": "^0.1.2",
+    "file-lookup": "0.0.2",
     "lei-mysql": "^0.1.6",
     "lei-mysql-model": "^0.1.1",
+    "lei-ns": "^0.1.2",
     "lei-pipe": "0.0.1",
-    "async": "~0.7.0",
-    "file-lookup": "0.0.2"
+    "lei-routes-sort": "0.0.2",
+    "morgan": "^1.0.0",
+    "rd": "0.0.2",
+    "serve-static": "^1.0.4",
+    "tinyliquid": "~0.2.19"
   }
 }
