--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "morgan": "^1.0.0",
     "rd": "0.0.2",
     "serve-static": "^1.0.4",
-    "tinyliquid": "~0.2.19"
+    "tinyliquid": "^0.2.23"
   }
 }
